Changes to CMakeLists to match new file structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,20 +5,26 @@ project(SimpleShop)
 
 set(APP_DIR ${CMAKE_SOURCE_DIR}/app/)
 
-set(API_DIR ${APP_DIR}/api)
-set(CLIENT_DIR ${APP_DIR}/client)
+set(API_DIR ${APP_DIR}/api/)
+set(CLIENT_DIR ${APP_DIR}/client/)
 
-set(PRODUCTS_DIR ${API_DIR}/products)
+set(SHOP_DIR ${API_DIR}/shop/)
+set(PRODUCTS_DIR ${SHOP_DIR}/products/)
 
-set(SHOP_TESTS_DIR ${API_DIR}/tests)
-set(PRODUCTS_TESTS_DIR ${PRODUCTS_DIR}/tests)
+set(SHOP_TESTS_DIR ${SHOP_DIR}/tests/)
+set(PRODUCTS_TESTS_DIR ${PRODUCTS_DIR}/tests/)
 
-add_library(SHOP_LIB ${API_DIR}/shop.cpp)
-add_library(PRODUCTS_LIB ${PRODUCTS_DIR}/products.cpp)
+set(
+  API_CPP_FILES
+  ${SHOP_DIR}/shop.cpp
+  ${PRODUCTS_DIR}/bakers.cpp
+)
 
 add_executable(${PROJECT_NAME} ${CLIENT_DIR}/app.cpp)
 
-target_link_libraries(${PROJECT_NAME} ${SHOP_LIB} ${PRODUCTS_LIB})
+add_library(API_LIB SHARED ${API_CPP_FILES})
+
+target_link_libraries(${PROJECT_NAME} ${API_LIB})
 
 # Tests related content below
 include(FetchContent)
@@ -32,17 +38,16 @@ enable_testing()
 
 set(TESTS_EXEC_NAME ${PROJECT_NAME}-tests)
 set(
-    TESTS 
-    ${SHOP_TESTS_DIR}/shop_tests.cpp
-    ${PRODUCTS_TESTS_DIR}/products_tests.cpp
+  TESTS 
+  ${SHOP_TESTS_DIR}/shop_tests.cpp
+  ${PRODUCTS_TESTS_DIR}/products_tests.cpp
 )
 add_executable(${TESTS_EXEC_NAME} ${TESTS})
 
 target_link_libraries(
-    ${TESTS_EXEC_NAME}
-    ${SHOP_LIB} 
-    ${PRODUCTS_LIB}
-    GTest::gtest_main
+  ${TESTS_EXEC_NAME}
+  ${API_LIB}
+  GTest::gtest_main
 )
 
 include(GoogleTest)
